--- a/WebSpa/user/MasterPage.Master
+++ b/WebSpa/user/MasterPage.Master
@@ -7,10 +7,31 @@
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
     <form id="form1" runat="server">
     <div>
+       
+        <div class="row">
+             <div class="col-md-4" style="align-content:flex-end">
+                 <asp:Image ID="Image1" runat="server" ImageUrl="./image/logo-ngang.png" Width="200" Height="150px"/>
+            </div>
+            <div class="col-md-6">
+
+            </div>
+        </div>
+        
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
