--- a/WebSpa/CSS/productLoad.css
+++ b/WebSpa/CSS/productLoad.css
@@ -3,7 +3,15 @@
 ul {
     clear: both;
     float: left;
+
     margin: 0;
     padding: 0;
     width: 100%;
+}
+li {
+    display: inline;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
 }
