--- a/WebSpa/user/MasterPage.Master
+++ b/WebSpa/user/MasterPage.Master
@@ -7,35 +7,79 @@
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/grid.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/base.css">
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-<!-- Popper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
-       
-        <div class="row">
-             <div class="col-md-4" style="align-content:flex-end">
-                 <asp:Image ID="Image1" runat="server" ImageUrl="./image/logo-ngang.png" Width="200" Height="150px"/>
-            </div>
-            <div class="col-md-6">
+        <div>
 
+            <div class="row">
+                <div id="main-header-wrapper" class="main-header-wrapper">
+
+                    <div class="container">
+
+                        <!-- **Main Header** -->
+                        <div id="mysticky-wrap">
+                            <div id="mysticky-nav" style="top: 0px;">
+                                <div class="main-header">
+                                    <div id="logo">
+                                        <a href="https://gaspa.vn/" title="Gà Spa • Trị Mụn Thâm An Toàn &amp; Hiệu Quả">
+                                            <img class="normal_logo" src="https://gaspa.vn/wp-content/uploads/2019/05/logo-ngang.png" alt="Gà Spa • Trị Mụn Thâm An Toàn &amp; Hiệu Quả" title="Gà Spa • Trị Mụn Thâm An Toàn &amp; Hiệu Quả">
+                                            <img class="darkbg_logo" src="https://gaspa.vn/wp-content/uploads/2019/05/logo-ngang.png" alt="Gà Spa • Trị Mụn Thâm An Toàn &amp; Hiệu Quả" title="Gà Spa • Trị Mụn Thâm An Toàn &amp; Hiệu Quả">
+                                        </a>
+                                    </div>
+                                    <div id="menu-wrapper" class="menu-wrapper ">
+                                        <div class="dt-menu-toggle" id="dt-menu-toggle">
+                                            Menu                                    <span class="dt-menu-toggle-icon"></span>
+                                        </div>
+                                        <div id="mega-menu-wrap-main-menu" class="mega-menu-wrap">
+                                            <div class="mega-menu-toggle">
+                                                <div class="mega-toggle-blocks-left"></div>
+                                                <div class="mega-toggle-blocks-center"></div>
+                                                <div class="mega-toggle-blocks-right">
+                                                    <div class="mega-toggle-block mega-menu-toggle-block mega-toggle-block-1" id="mega-toggle-block-1" tabindex="0"><span class="mega-toggle-label" role="button" aria-expanded="false"><span class="mega-toggle-label-closed">Menu</span><span class="mega-toggle-label-open">Menu</span></span></div>
+                                                </div>
+                                            </div>
+                                            <ul id="mega-menu-main-menu" class="mega-menu max-mega-menu mega-menu-horizontal" data-event="hover_intent" data-effect="fade_up" data-effect-speed="200" data-effect-mobile="disabled" data-effect-speed-mobile="200" data-mobile-force-width="false" data-second-click="close" data-document-click="collapse" data-vertical-behaviour="standard" data-breakpoint="900" data-unbind="true">
+                                                <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-home mega-current-menu-item mega-page_item mega-page-item-433 mega-current_page_item mega-align-bottom-left mega-menu-flyout mega-menu-item-8565" id="mega-menu-item-8565"><a class="mega-menu-link" href="https://gaspa.vn/" tabindex="0">Trang chủ</a></li>
+                                                <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-8076" id="mega-menu-item-8076"><a class="mega-menu-link" href="https://gaspa.vn/dich-vu/" tabindex="0">Dịch Vụ</a></li>
+                                                <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-has-children mega-align-bottom-left mega-menu-flyout mega-menu-item-8278" id="mega-menu-item-8278"><a class="mega-menu-link" href="https://gaspa.vn/san-pham/" aria-haspopup="true" aria-expanded="false" tabindex="0">Sản phẩm<span class="mega-indicator"></span></a>
+                                                    <ul class="mega-sub-menu">
+                                                        <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-8131" id="mega-menu-item-8131"><a class="mega-menu-link" href="https://gaspa.vn/san-pham-ga-spa/">Gà Spa</a></li>
+                                                        <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-menu-item-8127" id="mega-menu-item-8127"><a class="mega-menu-link" href="https://gaspa.vn/san-pham-eucerin/">Eucerin</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li class="mega-menu-item mega-menu-item-type-taxonomy mega-menu-item-object-category mega-align-bottom-left mega-menu-flyout mega-menu-item-8970" id="mega-menu-item-8970"><a title="Kết Quả Điều Trị" class="mega-menu-link" href="https://gaspa.vn/category/review/" tabindex="0">Kết Quả Điều Trị</a></li>
+                                                <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-8074" id="mega-menu-item-8074"><a class="mega-menu-link" href="https://gaspa.vn/kien-thuc-lam-dep/" tabindex="0">TIPS</a></li>
+                                                <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-8073" id="mega-menu-item-8073"><a class="mega-menu-link" href="https://gaspa.vn/lien-he/" tabindex="0">Liên hệ - Đặt lịch</a></li>
+                                                <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-9158" id="mega-menu-item-9158"><a class="mega-menu-link" href="https://gaspa.vn/uu-dai-giam-gia-gianh-cho-khach-hang-cua-ga-spa/" tabindex="0">Ưu Đãi</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+            </asp:ContentPlaceHolder>
         </div>
-        
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        
-        </asp:ContentPlaceHolder>
-    </div>
     </form>
 </body>
 </html>
