add header sitemap

--- a/SpaWeb/Site.Master
+++ b/SpaWeb/Site.Master
@@ -14,6 +14,14 @@
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <style>
+        a:hover {
+              color: red;
+            }
+        .at{
+            color:aqua
+        }
+    </style>
 
 </head>
 <body>
@@ -38,26 +46,43 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+        <div class="navbar  navbar-fixed-top " style="padding:30px;background-color: #fff">
+            <div class="container"  >
+               
+                   
+                <div class="navbar-collapse collapse row">
+                    <div runat="server" id="logo" style="width:300px;height:50px" class="col-md-4">
+			                <a href="https://gaspa.vn/" title="Gà Spa • Trị Mụn Thâm An Toàn &amp; Hiệu Quả">
+				                <img style="width:300px;height:50px" class="normal_logo" src="https://gaspa.vn/wp-content/uploads/2019/05/logo-ngang.png" alt="Gà Spa • Trị Mụn Thâm An Toàn &amp; Hiệu Quả" title="Gà Spa • Trị Mụn Thâm An Toàn &amp; Hiệu Quả">				        
+			                </a>
+                           </div>
+                    <div class="col-md-8" style="float:right;color:#141414">
+                         <ul class="nav navbar-nav">
+         
+                        <li class="at"><a class="active" runat="server" href="~/" style="color:#000000">Home</a></li>
+                        <li><a runat="server" href="~/About" style="color:#000000">Dịch vụ</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:#000000">Sản Phẩm
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                              <li ><a  runat="server" href="~/" style="color:#000000">Ga Spa</a></li>
+                              <li><a  runat="server" href="~/" style="color:#000000">Uecerin</a></li>
+                              <li><a  runat="server" href="~/">Page 1-3</a></li>
+                            </ul>
+                          </li>
+                        <li><a runat="server" href="~/Contact" style="color:#000000">Sản Phẩm</a></li>
+                         <li><a runat="server" href="~/Contact" style="color:#000000">Liên hệ -đặt lịch</a></li>
+                         <li><a runat="server" href="~/Contact" style="color:#000000">Ưu đãi</a></li>
                     </ul>
+                    </div>
+                   
                 </div>
             </div>
         </div>
-        <div class="container body-content">
+        <div class="container body-content" style="margin-top:50px">
+            <div class="container">
+  <br>
+ 
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
